# omd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dev/omd/app/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
demo/: default.md
docs/: README.md  android.md  api-reference.md  architecture.md  comparison.md  configuration.md  deployment.md  desktop.md  development.md  faq.md  markdown-syntax.md  release-notes.md  roadmap.md  security.md  user-guide.md  vim-keybindings.md  web.md
omd-common/: Cargo.toml
omd-common/src/: diagram.rs  front_matter.rs  lib.rs  locale.rs  markdown.rs  tasks.rs
scripts/: build-android.sh  curl-retry.sh  fetch-web-assets.sh  release.sh  trunk-build.sh
src/: app.rs  clipboard.rs  desktop_shell.rs  editor_highlight.rs  export.rs  find_replace.rs  image_compress.rs  keybindings.rs  line_gutter.rs  main.rs  markdown.rs  mermaid.rs  minimap.rs  project.rs  settings.rs  sync_scroll.rs  syntax_highlight.rs  tabs.rs  vim_ex.rs
web/: Cargo.toml  Trunk.toml  diagrams.js  index.html  manifest.webmanifest  style.css  sw.js
web/assets/: .gitignore  viz.min.js
web/src/: clipboard.rs  editor_highlight.rs  export.rs  find_replace.rs  idb.rs  image_compress.rs  keybindings.rs  lib.rs  line_gutter.rs  markdown.rs  minimap.rs  project.rs  recent.rs  settings.rs  sync_scroll.rs  tabs.rs  unsaved.rs  vim_ex.rs
