[package]
name = "omd"
version = "0.1.0"
edition = "2021"
description = "A lightweight Markdown editor written in Rust"
license = "MIT"
readme = "README.md"

[dependencies]
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
pulldown-cmark = "0.12"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
