[workspace]
members = [".", "web", "omd-common"]
resolver = "2"

[package]
name = "omd"
version = "0.9.0"
edition = "2021"
description = "A lightweight Markdown editor written in Rust"
license = "MIT"
readme = "README.md"

[dependencies]
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
pulldown-cmark = { version = "0.12", features = ["html"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
omd-common = { path = "omd-common" }
mermaid-rs-renderer = { version = "0.3", default-features = false }
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
once_cell = "1"
syntect = "5.2"
tray-icon = { version = "0.19", optional = true }
global-hotkey = { version = "0.7", optional = true }
gtk = { version = "0.18", optional = true, features = ["v3_24"] }

[features]
default = ["desktop-shell"]
desktop-shell = ["dep:tray-icon", "dep:global-hotkey", "dep:gtk"]

[profile.release]
lto = true
codegen-units = 1
strip = true
