[package]
name = "omd-web"
version = "0.5.0"
edition = "2021"
description = "Browser version of omd markdown editor"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
pulldown-cmark = { version = "0.12", features = ["html"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "Navigator",
    "Clipboard",
    "Storage",
    "Blob",
    "Url",
    "BlobPropertyBag",
    "File",
    "FileList",
    "FileReader",
    "Event",
    "ProgressEvent",
    "ClipboardEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "KeyboardEvent",
    "MouseEvent",
    "DragEvent",
    "ClipboardEvent",
] }
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
omd-common = { path = "../omd-common" }
